--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <h1>Clase de GitHub</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo, soluta.</p>
+    <marquee behavior="" direction="">bienvenidos a git</marquee>
 </body>
 </html>
