--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <h1>Clase de GitHub</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo, soluta.</p>
     <marquee behavior="" direction="">bienvenidos a git</marquee>
+
+    <strong>curso de html</strong>
 </body>
 </html>
