--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Clase de GitHub</h1>
+    <em>curso de github</em>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo, soluta.</p>
     <marquee behavior="" direction="">bienvenidos a git</marquee>
 
