agrego un marquesina

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <marquee behavior="" direction="">bienvenidos a git</marquee>
 
     <strong>curso de html</strong>
+
+    <marquee behavior="" direction="">bienvenidos a git</marquee>
 </body>
 </html>
