agrego lista para verlo en github

--- a/index.html
+++ b/index.html
@@ -12,9 +12,19 @@
     <em>curso de github</em>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo, soluta.</p>
     <marquee behavior="" direction="">bienvenidos a git</marquee>
-
     <strong>curso de html</strong>
-
     <marquee behavior="" direction="">bienvenidos a git</marquee>
+    <section>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">home</a>
+                    <a href="#">home</a>
+                    <a href="#">home</a>
+                    <a href="#">home</a>
+                </li>
+            </ul>
+        </nav>
+    </section>
 </body>
 </html>
