actualizo mi barra de navegacion
cambie cada uno de los enlaces

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <ul>
                 <li>
                     <a href="#">home</a>
-                    <a href="#">home</a>
-                    <a href="#">home</a>
-                    <a href="#">home</a>
+                    <a href="#">nosotros</a>
+                    <a href="#">productos</a>
+                    <a href="#">contacto</a>
                 </li>
             </ul>
         </nav>
